--- a/S_项目实战/朝夕_WPF_数据采集与监控项目/朝夕_WPF_数据采集与监控项目/朝夕_WPF_数据采集与监控项目.csproj
+++ b/S_项目实战/朝夕_WPF_数据采集与监控项目/朝夕_WPF_数据采集与监控项目/朝夕_WPF_数据采集与监控项目.csproj
@@ -25,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,6 +35,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -65,6 +67,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Base\ExtendClass.cs" />
     <Compile Include="Base\GlobalMonitor.cs" />
     <Compile Include="Base\MonitorValueState.cs" />
     <Compile Include="BLL\DataResult.cs" />
