--- a/Z-新阁上位机学习/第01章零基础快速到项目实战 --尝试实现/SocketProject/SocketProject/SocketProject.csproj
+++ b/Z-新阁上位机学习/第01章零基础快速到项目实战 --尝试实现/SocketProject/SocketProject/SocketProject.csproj
@@ -50,6 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmJSON.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmJSON.Designer.cs">
+      <DependentUpon>FrmJSON.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmTCPClient.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +72,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
+    <EmbeddedResource Include="FrmJSON.resx">
+      <DependentUpon>FrmJSON.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmTCPClient.resx">
       <DependentUpon>FrmTCPClient.cs</DependentUpon>
     </EmbeddedResource>
